Fixing StorageBundle (#98)
* Fixes and logging

* fixing tests

* changing enums due to Jersey problems

* renaming from location to url in CVRequest

* adding missing property in CVResponse

* adding CV server configuration

* Encoded paths to files are now URL, not URI

* Adding StorageResource to jersey environment

* Extracting methods, adding CV error handling, fixes

* extracting LOG variable

* Fixing CVResponse and adding tests to it

* fixing logging

* extracting logger

* removing sout